# Mixed-Num

./: Cargo.toml  LICENSE  README.md  RELEASES.md  ROADMAP.md
src/: RELEASES.md  complex.rs  fixed_impl.rs  float_impl.rs  int_impl.rs  lib.rs  traits.rs  trigonometry.rs
src/complex/: cartesian_impl.rs  ops.rs  polar_impl.rs
src/complex/cartesian_impl/: num_complex.rs  write_complex.rs
src/float_impl/: f32_impl.rs  f64_impl.rs
src/traits/: complex_traits.rs  math.rs  math_traits.rs
src/trigonometry/: atan.rs  sqrt.rs
tests/: cartesian_traits.rs  sin_comparrison.rs
