[package]
name = "mixed-num"
version = "0.3.0"
authors = ["Erik Buer"]
edition = "2021"
description = "A trait for generic implementations of numerical methods."
readme = "README.md"
repository = "https://github.com/norsk-datateknikk/Mixed-Num"
license-file = "LICENSE"
keywords = ["dsp", "radio", "audio", "no_std"]

[lib]
path  = "src/lib.rs"
bench = false
doc   = true
test  = true
crate-type = ["lib"]

[dependencies]
fixed   = "1.13"
cordic  = "0.1"
typenum = "1.15"
libm    = "0.2"

[dependencies.num]
version = "0.4"
default-features = false

[dev-dependencies]
plotters = "^0.3.1"

[features]
std = []
